# libctr-rs

./: .gitignore  Cargo.toml  Makefile  README.md
ctr/: Cargo.toml
ctr/src/: cfg.rs  handle.rs  lib.rs  ndm.rs  os.rs  service_session.rs  thread.rs
ctr/src/allocator/: mappable.rs  mod.rs
ctr/src/allocator/heap/: ctr.rs  mock.rs  mod.rs
ctr/src/hid/: button.rs  global.rs  interface_device.rs  ipc.rs  mod.rs  pressed_buttons.rs
ctr/src/http/: ipc.rs
ctr/src/ipc/: command.rs
ctr/src/ipc/translate_params/: buffer.rs  handles.rs  mod.rs  permission_buffer.rs  static_buffer.rs
ctr/src/process/: debug_process.rs  mod.rs  process_impl.rs
ctr/src/result/: error.rs  error_module.rs  result_code.rs
ctr/src/svc/: general.rs  luma.rs  mod.rs
ctr/src/sysmodule/notification/: manager.rs
ctr/src/sysmodule/server/: mod.rs  router.rs  service.rs
ctr/src/utils/: cstring.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/ctr_method/: macro_impl.rs  method_signature.rs  mod.rs
macros/src/ctr_start/: macro_impl.rs
macros/src/hos/: macro_impl.rs  mod.rs
macros/src/match_ctr_route/: args.rs  macro_impl.rs  mod.rs
macros/src/utils/: enum_variant.rs  mod.rs
macros/tests/: ctr_method.rs
src/: ac.rs  cfg.rs  frd.rs  handle.rs  lib.rs  log.rs  memory.rs  ndm.rs  pm_dbg.rs  ps.rs  ptm.rs  ptm_sysm.rs  result.rs  safe_transmute.rs  srv.rs  thread.rs  time.rs
src/ac/: shared.rs
src/allocator/: mod.rs
src/allocator/heap/: ctr.rs  mock.rs
src/cfg/: shared.rs
src/frd/: shared.rs
src/fs/: ipc.rs  ipc_wrappers.rs  mod.rs  shared.rs  wrapper.rs
src/fs/helpers/: mod.rs  path.rs  utils.rs
src/hid/: ctr.rs  mock.rs  mod.rs  pressed_buttons.rs
src/hid/shared/: button.rs  global.rs  interface_device.rs  mod.rs  pressed_buttons.rs
src/http/: ctr.rs  ipc.rs  mock.rs  mod.rs  shared.rs  wrapper.rs
src/ipc/: command.rs  mod.rs  shared.rs  static_buffer_iterator.rs
src/ipc/translate_params/: buffer.rs  current_process_id.rs  handles.rs  permission_buffer.rs  static_buffer.rs
src/memory/: shared.rs
src/ndm/: shared.rs
src/os/: ctr.rs  mock.rs
src/pm_dbg/: shared.rs
src/process/: debug_process.rs  mod.rs  process_impl.rs
src/ps/: shared.rs
src/ptm/: ctr.rs  mock.rs  shared.rs
src/result/: common_impls.rs  error_description.rs  error_level.rs  error_module.rs  error_summary.rs  generic.rs  mod.rs  result_code.rs
src/srv/: ctr.rs  mock.rs
src/svc/: ctr.rs  general.rs  luma.rs  mock.rs  shared.rs
src/sysmodule/: mod.rs
src/sysmodule/notification/: manager.rs  mod.rs  subscription.rs
src/sysmodule/server/: manager.rs  mod.rs  service.rs  session.rs
src/thread/: mod.rs
src/utils/: convert.rs  cstring.rs  mod.rs  parse.rs  shared.rs
