[package]
name = "libctr-rs"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
cstr_core = "0.2"
hashbrown = "0.11"
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "d1b5523" }
num_enum = { version = "0.5", default-features = false }
static_assertions = "1.1"
ctr_macros = { path = "./macros" }

[target.'cfg(target_os = "horizon")'.dependencies]
ctru-sys = { git = "https://github.com/zaksabeast/ctru-rs" }

[target.'cfg(not(target_os = "horizon"))'.dependencies]
mocktopus = { version = "0.7.11" }

[features]
log = []

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
