[package]
name = "ctr"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
cstr_core = "0.2"
ctr_macros = { path = "../macros" }
hashbrown = "0.11"
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4bc5adf" }
num_enum = { version = "0.5", default-features = false }

[target.'cfg(target_os = "horizon")'.dependencies]
ctru-sys = { git = "https://github.com/zaksabeast/ctru-rs" }
linked_list_allocator = "0.10"
