[package]
name = "ctr_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

[dependencies]
darling = "0.14.1"
heck = "0.4.0"
proc-macro2 = "1.0"
quote = "1.0.18"
syn = { version = "1.0.98", features = ["full", "extra-traits"] }

[dev-dependencies]
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "d1b5523" }
num_enum = { version = "0.5.7", default-features = false }
ctr = { package = "libctr-rs", path = ".." }
