[package]
name = "ctr_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

[dependencies]
darling = "0.14"
heck = "0.4.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4bc5adf" }
num_enum = { version = "0.5", default-features = false }
ctr = { package = "ctr", path = "../ctr" }
